fix spacing issue on header

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -246,3 +246,14 @@ span.radio {
 .control-label.sign-up-form-label {
   text-align: left;
 }
+
+#index-carousel {
+  position: static;
+}
+
+.display-message {
+  font-size: 20px;
+}
+
+
+
